# ai-mind-meld

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  dictionary.txt  main.py  pyproject.toml
.claude/commands/: maintenance.md
.github/workflows/: lint.yml
samples/: claude-sonnet-4_beeswax_xylophone.txt  claude-sonnet-4_doorknob_guitar.txt  claude-sonnet-4_hamburger_jigsaw.txt  claude-sonnet-4_icicle_yogurt.txt  claude-sonnet-4_rocket_windmill.txt  phi-4_butterfly_triangle.txt  phi-4_calculator_goblin.txt  phi-4_headphone_volcano.txt  phi-4_horseshoe_sandwich.txt  phi-4_motorcycle_statue.txt
